@@ -206,7 +206,7 @@ public class AsynchronousEventTaskJobFactory extends AbstractJobFactory<Asynchro
 			}
 
 		});
-		final Optional<EmailAccount> account = emailAccountFacade.firstOf(asList(emailTemplateSupplier.get()
+		final Optional<EmailAccount> account = emailAccountFacade.firstOfOrDefault(asList(emailTemplateSupplier.get()
 				.getAccount(), task.getNotificationAccount()));
 		final Supplier<EmailAccount> emailAccountSupplier = account.isPresent() ? ofInstance(account.get()) : null;
 		final EngineBasedTemplateResolver templateResolver = EngineBasedTemplateResolver.newInstance() //
