@@ -122,6 +122,8 @@ FIXES
 
  * Grid or card print button click error
 
+ * Error of email account not specified when emails are sent using tasks
+
 
 
 
